# Chirpig

./: .gitignore  README.md
ciri/: README.md  endopints.md  network.drawio
outServer/: Cargo.toml
outServer/src/: main.rs
outServer/src/entry/: chirp.rs  followee.rs  follower.rs  member.rs
outServer/src/internal/: crypt.rs  encode.rs
outServer/src/types/: config.rs  error.rs  marker.rs
