[package]
name = "chirpig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.4.0"
chrono = "0.4.26"
sqlx = {version = "0.6.3", features = ["runtime-actix-rustls"]}
actix-web = { version = "4.3.1", features = ["rustls"] }
crypto = { version = "0.5.1", features = ["cipher", "elliptic-curve", "password-hash", "signature"] }
argon2 = "0.5"
rand_chacha = "0.3.1"
rand = "0.8.5"
k256 = { version = "0.13.1", features = ["pem"] }
base64ct = "1.6.0"
clap = { version = "4.3.11", features = ["derive"] }
aes-gcm-siv = "0.11.1"
base64 = "0.21.2"
generic-array = "0.14.7"
camellia = "0.1.0"
block-modes = "0.9.1"
chacha20poly1305 = "0.10.1"
once_cell = "1.18.0"
async-once-cell = "0.5.3"
toml = "0.7.6"
serde = { version = "1.0.169", features = ["derive"] }
